# hyprnote

./: Cargo.toml  package.json  pnpm-lock.yaml  turbo.json
apps/desktop/: lingui.config.js  package.json
apps/desktop/src/: main.tsx  routeTree.gen.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: ext.rs  lib.rs
crates/db-user/: Cargo.toml
crates/db-user/assets/: onboarding-raw.html  thank-you.md
crates/db-user/src/: config_types.rs
crates/language/src/: lib.rs
crates/stt/src/: deepgram.rs
crates/template/assets/: ai_chat.system.jinja  create_title.system.jinja  create_title.user.jinja  enhance.system.jinja  enhance.user.jinja  postprocess_enhance.system.jinja  postprocess_enhance.user.jinja  show_annotation.system.jinja  show_annotation.user.jinja
crates/template/src/: lib.rs
plugins/connector/: Cargo.toml  build.rs
plugins/connector/js/: bindings.gen.ts
plugins/connector/permissions/: default.toml
plugins/connector/src/: commands.rs  ext.rs  lib.rs  store.rs  types.rs
plugins/gitee-ai/: Cargo.toml  build.rs  package.json
plugins/gitee-ai/js/: bindings.gen.ts
plugins/gitee-ai/permissions/: default.toml
plugins/gitee-ai/permissions/autogenerated/: reference.md
plugins/gitee-ai/permissions/autogenerated/commands/: ensure_free_trial_started.toml  get_app_info.toml  get_login_status.toml  get_pay_result.toml  get_user_info.toml  logout.toml  pay.toml  save_token.toml  send_verification_code.toml  verify_code.toml
plugins/gitee-ai/permissions/schemas/: schema.json
plugins/gitee-ai/src/: commands.rs  error.rs  ext.rs  lib.rs  store.rs  types.rs
plugins/listener/src/: fsm.rs
plugins/local-llm/assets/: onboarding-enhanced.md
plugins/local-stt/js/: bindings.gen.ts
plugins/local-stt/src/: ext.rs  lib.rs  model.rs  server.rs
plugins/windows/js/: bindings.gen.ts
plugins/windows/src/: ext.rs
scripts/: build-tauri.sh
(+53 files in other folders)
