[package]
name = "tauri-plugin-gitee-ai"
version = "0.0.1"
description = "Gitee AI plugin for Tauri"
authors = ["hyprnote"]
license = "MIT"
edition = "2021"
links = "tauri-plugin-gitee-ai"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }


[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
chrono = { workspace = true }

tauri-plugin-store2 = { path = "../store2" }

specta = { workspace = true }
tauri = { workspace = true, features = ["test"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
