[package]
name = "tauri-plugin-gitee-ai"
version = "0.0.1"
authors = ["hyprnote"]
edition = "2021"
license = "MIT"
links = "tauri-plugin-gitee-ai"
description = "Gitee AI plugin for Tauri"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }

tauri-plugin-store2 = { path = "../store2" }

specta = { workspace = true }
tauri = { workspace = true, features = ["test"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
